# ergol

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
.github/workflows/: build.yml
book/: book.toml
book/src/: SUMMARY.md  enums.md  ergol-macro.md  getting-started.md  many-to-many.md  migrations.md  one-to-one-and-many-to-one.md  rocket.md
cli/: Cargo.toml  README.md
cli/src/: db.rs  diff.rs  lib.rs  main.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
ergol/: Cargo.toml  README.md
ergol/src/: lib.rs  pg.rs  query.rs  relation.rs
ergol_proc_macro/: Cargo.toml
ergol_proc_macro/src/: ergol.rs  lib.rs  pgenum.rs
example/: Cargo.toml
example/src/: many_to_many.rs  many_to_many_extra.rs  many_to_one.rs  one_to_one.rs  query.rs  rocket.rs
examples/: Cargo.toml
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/many_to_many/: Cargo.toml
examples/many_to_many/src/: main.rs
examples/many_to_many_extra/: Cargo.toml
examples/many_to_one/: Cargo.toml
examples/many_to_one/src/: main.rs
examples/one_to_one/: Cargo.toml
examples/one_to_one/src/: main.rs
examples/query/: Cargo.toml
examples/query/src/: main.rs
examples/rocket/: Cargo.toml
examples/rocket/src/: main.rs
proc_macro/: Cargo.toml  README.md
proc_macro/src/: ergol.rs  pgenum.rs
