[package]
name = "ergol_cli"
description = "A CLI application to help deal with migrations"
version = "0.1.2"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://ergol-rs.github.io"
repository = "https://github.com/polymny/ergol/tree/dev/cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
case = "1.0.0"
colored = "2.0.0"
toml = "0.5"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7" }
ergol_core = { version = "0.1.1", path = "../core" }

[[bin]]
name = "ergol"
path = "src/main.rs"
