[package]
name = "ergol_core"
description = "the core for ergol cli, an async ORM for Rust"
version = "0.1.7"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://ergol-rs.github.io"
repository = "https://github.com/polymny/ergol/tree/dev/core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
case = "1.0.0"
