[package]
name = "ergol"
description = "an async ORM for Rust"
version = "0.1.0"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://ergol-rs.github.io"
repository = "https://github.com/polymny/ergol/tree/dev/ergol"

[features]
with-rocket = ["rocket", "deadpool"]
with-serde = ["serde"]
with-bit-vec-0_6 = ["tokio-postgres/with-bit-vec-0_6", "bit-vec"]
with-chrono-0_4 = ["tokio-postgres/with-chrono-0_4", "chrono"]
with-eui48-0_4 = ["tokio-postgres/with-eui48-0_4", "eui48"]
with-geo-types-0_6 = ["tokio-postgres/with-geo-types-0_6", "geo-types-0_6"]
with-serde_json-1 = ["tokio-postgres/with-serde_json-1"]
with-uuid-0_8 = ["tokio-postgres/with-uuid-0_8", "uuid"]
with-time-0_2 = ["tokio-postgres/with-time-0_2", "time-0_2"]
with-time-0_3 = ["tokio-postgres/with-time-0_3", "time-0_3"]

[dependencies]
# Necessary dependecies
async-trait = "0.1.41"
ergol_proc_macro = { version = "0.1.0", path = "../proc_macro" }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7" }
bytes = "1.0"

# Optional dependencies for serde
serde = { version = "1.0", optional = true }

# Optional dependecies for more types
bit-vec = { version = "0.6", optional = true }
chrono = { version = "0.4", optional = true }
eui48 = { version = "0.4", optional = true }
geo-types-0_6 = { package = "geo-types", version = "0.6", optional = true }
uuid = { version = "0.8", optional = true }
time-0_2 = { package = "time", version = "0.2", optional = true }
time-0_3 = { package = "time", version = "0.3", optional = true }

# Optional dependency for support in rocket
rocket = { version = "0.5.0-rc.1", optional = true }
deadpool = { version = "0.7", optional = true }
