[package]
name = "ergol_proc_macro"
description = "the proc macros for ergol, an async ORM for Rust"
version = "0.0.1"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/polymny/ergol"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "parsing"] }
quote = "1.0"
case = "1.0.0"
proc-macro2 = "1.0.24"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
ergol-core = { path = "../core" }

[dev-dependencies]
