[package]
name = "ergol-example"
version = "0.1.0"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergol = { path = "../ergol", features = ["with-serde_json-1"] }
serde = { version = "1.0.117", features = ["derive"] }

[[bin]]
name = "one-to-one"
path = "src/one_to_one.rs"

[[bin]]
name = "many-to-one"
path = "src/many_to_one.rs"

[[bin]]
name = "many-to-many"
path = "src/many_to_many.rs"
