[package]
name = "ergol-example"
version = "0.1.0"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-rocket = ["rocket", "ergol/with-rocket"]

[dependencies]
ergol = { path = "../ergol", features = ["with-serde_json-1"] }
serde = { version = "1.0.117", features = ["derive"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", optional = true }

[[bin]]
name = "one-to-one"
path = "src/one_to_one.rs"

[[bin]]
name = "many-to-one"
path = "src/many_to_one.rs"

[[bin]]
name = "many-to-many"
path = "src/many_to_many.rs"

[[bin]]
name = "many-to-many-extra"
path = "src/many_to_many_extra.rs"

[[bin]]
name = "query"
path = "src/query.rs"

[[bin]]
name = "rocket"
path = "src/rocket.rs"
required-features = ["with-rocket"]
