[package]
name = "many-to-many-extra"
version = "0.1.0"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergol = { path = "../../ergol", features = ["with-serde_json-1"] }
serde = { version = "1.0.117", features = ["derive"] }

