[package]
name = "rocket"
version = "0.1.0"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergol = { path = "../../ergol", features = ["with-serde_json-1", "with-rocket"] }
serde = { version = "1.0.117", features = ["derive"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "0d53e23" }
